--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="com.triggertrap.ZeroConf"
-        version="1.0.3">
+        version="1.0.4">
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
@@ -21,6 +21,8 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+            <uses-permission android:name="android.permission.INTERNET" />
+			<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
         </config-file>
 
         <config-file target="res/xml/config.xml" parent="/*">
