updated to npm registry, jmdns managed via maven

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="com.triggertrap.ZeroConf"
-        version="1.1.1">
+        id="cordova-zeroconf-plugin"
+        version="1.2.0">
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
@@ -22,7 +22,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
             <uses-permission android:name="android.permission.INTERNET" />
-			<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+			      <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
         </config-file>
 
         <config-file target="res/xml/config.xml" parent="/*">
@@ -32,7 +32,7 @@
             </feature>
         </config-file>
 
-        <source-file src="src/android/libs/jmdns.jar" target-dir="libs" framework="true" />
+        <framework src="javax.jmdns:jmdns:+"/>
 
         <source-file src="src/android/ZeroConf.java" target-dir="src/com/triggertrap" />
 
