--- a/plugin.xml
+++ b/plugin.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.triggertrap.ZeroConf"
-    version="1.1.0">
+    id="com.cambiocreative.cordova.plugin.zeroconf"
+    version="1.0.1">
+    <name>Cordova ZeroConf Plugin</name>
+    <description>ZeroConf plugin for Cordova/Phonegap</description>
+    <author>Osmond van Hemert</author>
+    <keywords>cordova,plugin,network,zeroconf,service,discovery</keywords>
+    <license>MIT</license>
+
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
 
-    <name>ZeroConf</name>
-    <description>ZeroConf plugin for Cordova/Phonegap</description>
-    <author>Vlad Stirbu</author>
-    <keywords>zeroconf</keywords>
-    <license>MIT</license>
-
-    <js-module src="www/ZeroConf.js" name="zeroconf">
-        <clobbers target="ZeroConf" />
+    <js-module src="www/zeroconf.js" name="ZeroConf">
+        <clobbers target="cambiocreative.CDVZeroConfig" />
     </js-module>
 
     <platform name="android">
@@ -25,12 +25,12 @@
         </config-file>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="ZeroConf">
-                <param name="android-package" value="com.triggertrap.ZeroConf" />
+                <param name="android-package" value="com.cambiocreative.cordova.plugin.zeroconf" />
                 <param name="onload" value="true" />
             </feature>
         </config-file>
         <source-file src="src/android/libs/jmdns.jar" target-dir="libs" framework="true" />
-        <source-file src="src/android/ZeroConf.java" target-dir="src/com/triggertrap" />
+        <source-file src="src/android/zeroconf.java" target-dir="src/com/cambiocreative" />
     </platform>
 
     <platform name="ios">
@@ -40,8 +40,8 @@
                 <param name="onload" value="true" />
             </feature>
         </config-file>
-        <header-file src="src/ios/ZeroConf.h" />
-        <source-file src="src/ios/ZeroConf.m" />
+        <header-file src="src/ios/zeroconf.h" />
+        <source-file src="src/ios/zeroconf.m" />
     </platform>
 
     <info></info>
