--- a/plugin.xml
+++ b/plugin.xml
@@ -2,14 +2,14 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="cordova-zeroconf-plugin"
-        version="1.2.0">
+        version="1.3.0">
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
 
     <name>ZeroConf</name>
     <description>ZeroConf plugin for Cordova/Phonegap</description>
-    <author>Vlad Stirbu</author>
+    <author>Vlad Stirbu, Jonas Schnelli</author>
     <keywords>zeroconf</keywords>
     <license>MIT</license>
 
@@ -17,6 +17,19 @@
         <clobbers target="ZeroConf" />
     </js-module>
 
+    <!-- ios -->
+    <platform name="ios">
+        <!-- Cordova >= 2.8 -->
+        <config-file target="config.xml" parent="/*">
+          <feature name="ZeroConf">
+              <param name="ios-package" value="CDVZeroConf" />
+              <param name="onload" value="true" />
+          </feature>
+        </config-file>
+
+        <source-file src="src/ios/CDVZeroConf.mm"/>
+    </platform>
+    
     <platform name="android">
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
